--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 # Site settings
-title: Dominik Moritz
-email: domoritz@cmu.edu
+title: Aakash Saboo
+email: aakashsaboo2@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-   Faculty at Carnegie Mellon University and Research Scientist at Apple. I create interactive data visualization and analysis tools. PhD from University of Washington.
+   Industrial Engineer. Researching in Medical Imaging and Self-Supervised Learning
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://www.domoritz.de" # the base hostname & protocol for your site
-production_url: "https://www.domoritz.de"
-github_username: domoritz
+url: "https://www.aakash-saboo.github.io" # the base hostname & protocol for your site
+production_url: "https://www.aakash-saboo.github.io"
+github_username: aakash-saboo
 permalink: /blog/:year/:month/:title.html
 
 twitter:
-  username: domoritz
+  username: AakashSaboo
 
 sass:
   style: compressed
