--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -30,7 +30,7 @@
   recording: 
   image:  manifold-xray.png
   description: "Proposed a novel framwork for localized Image Editing of Chest X-rays to confer Opacity and Cardiomegaly in the user-defined Region of Interest"
-  highlight: 4
+  highlight: 3
   
   
 - title: Skin Lesion classification (Kaggle)
@@ -41,7 +41,7 @@
   recording: 
   image: 
   description: "Competed in the Skin Lesion Classification challenge"
-  highlight: 4
+  highlight:
   
 - title: Self-supervised Learning with Vector Quantization (ONGOING)
   url: 
@@ -51,6 +51,6 @@
   recording: 
   image: 
   description: "Investigating SoTA frameworks like SimCLR, MOCO and Barlow Twins with Vector Quantized bottleneck"
-  highlight: 4
+  highlight:
 
 
