--- a/_data/positions.yml
+++ b/_data/positions.yml
@@ -1,8 +1,8 @@
-- title: Senior Project Scientist
-  years: 2020-present
-  company: Carnegie Mellon University
-  location: Pittsburgh, PA
-  description: In the Fall of 2020, I started on the faculty at the Human-Computer-Interaction Institute.
+- title: Research Trainee
+  years: April 2021 - Present
+  company: Stanford University
+  location: California, CA
+  description: Working on improving SOTA Self-Supervised methods with Quantization methods.
 - title: Research Scientist
   years: 2019-present
   company: Apple
