--- a/_data/positions.yml
+++ b/_data/positions.yml
@@ -38,113 +38,14 @@
   mentors:
     - Prof. Ganesh Bagler
   description: Worked on designing and implementing a predictive model using Machine Learning and Graph theory to predict the odor of a molecule given its 2000-Dimensional features. The work involved combination of Graph theory, Natural language processing, unsupervised and supervised learning, Dimension reduction techniques on a small and sparse data.
+  
+  - title: Research Intern
+  years: August 2018- Januray 2019
+  company: CSIR-CEERI
+  group: Computer Vision Group
+  location: New Delhi, India
+  mentors:
+    - Dr. Manoj Sharma
+  description: Evaluated multiple DL algorithms on Facial Antispoofing using Deep-Learning funded by LG. Designed and implemented multiple models for Lung disease detection on CT scans
 
-- title: Research Intern
-  years: 2015
-  company: Google Research
-  group: Structured Data Team
-  location: Mountain View, CA
-  mentors:
-    - Sudip Roy
-    - Alon Halevy
-    - Alkis Polyzotis
-    - Natasha Noy
-    - Xiao Yu
-    - Chris Olston
-    - Sitaram Iyer
-  description: Improved the user experience of an internal search engine and designed a summarization algorithm for search results. Also worked with the Knowledge Graph team on exploring a new graph infrastructure that enables integrated applications.
-  project: DataSearch
-  skills:
-    - UX
-    - Algorithm design
-    - Large-scale systems
-    - Angular
-    - C++
-- title: Engineering Intern
-  years: 2014
-  company: Google
-  location: New York City, NY
-  mentors:
-    - Ben Atkins
-    - Shishi Chen
-    - John Banning
-  description: Developed new algorithms to support complex queries in large-scale production monitoring system.
-  project: Monarch
-  skills:
-    - Algorithm design
-    - Large-scale software development
-    - Profiling
-    - C++
-- title: Intern and Developer
-  years: 2012-2013
-  company: Open Knowledge Foundation
-  location: London and Berlin
-  mentors:
-    - David Raznick
-    - Rufus Pollock
-    - Adrià Mercader
-    - Sean Hammond
-    - Stefan Wehrmeyer
-  description: Two-month summer internship and subsequent one-year involvement in development and training for [CKAN](https://ckan.org/), the most deployed open data portal in the world. I developed the [new data store](https://docs.ckan.org/en/latest/maintaining/datastore.html), a [plugin API for CKAN](https://docs.ckan.org/en/latest/maintaining/data-viewer.html), and a [service to automatically ingest data](https://github.com/ckan/datapusher). I also consulted state governments on open data strategies.
-  project: CKAN
-  skills:
-    - Distributed teams
-    - Agile development
-    - Large legacy systems
-    - Python
-    - JavaScript
-- title: Bachelor's Project
-  years: 2012-2013
-  company: Hasso Plattner Institute
-  location: Potsdam
-  description: In a team of four students developed a tool to visualize software evolution with 3D Voronoi Treemaps. I focused on the theory and implementation of layout algorithms.
-  skills:
-    - Legacy code
-    - Visualization
-    - Complex algorithms
-    - C++
-- title: Undergraduate Research Assistant
-  years: 2012-2013
-  company: University of Potsdam
-  group: Knowledge Representation and Reasoning Group
-  location: Potsdam
-  mentors:
-    - Benjamin Kaufmann
-    - Torsten Schaub
-    - Martin Gebser
-  description: Worked on theory and implementation of an extension of the Clasp Answer Set Programming solver for pseudo-boolean constraints.
-  project: Clasp Answer Set Solver
-  skills:
-    - Research
-    - Benchmarking
-    - Logic programs
-    - C++
-  hidden: true
-- title: Google Summer of Code
-  years: 2012
-  location: Remote
-  description: Extend open data platform for information about people.
-  skills:
-    - Open source development
-    - JavaScript
-  hidden: true
-- title: Intern
-  years: 2012
-  company: Potsdam Institute for Climate Impact Research (PIK)
-  location: Potsdam
-  description: Developed a search engine for scientific research on climate change.
-  hidden: true
-- title: Intern
-  company: Max Born Institute for Nonlinear Optics and Short Pulse Spectroscopy
-  years: 2008
-  location: Berlin
-  description: Conduct experiments with lasers.
-  mentors:
-    Michael Wörner
-  hidden: true
-- title: Intern
-  company: Fraunhofer Institute for Telecommunications (HHI)
-  location: Berlin
-  description: Conduct experiments in cleanroom.
-  years: 2006
-  hidden: true
+
